# harness

./: .gitattributes  .gitignore  .gitmodules  .mise.toml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  THIRD_PARTY_NOTICES.md  build.rs  buildServer.json  clippy.toml  pyrightconfig.json  renovate.json  rust-toolchain.toml
aff/: Cargo.toml
aff/src/: cli.rs  command_intent.rs  config_patch.rs  hook_agent.rs  hook_payload.rs  hook_render.rs  lib.rs  main.rs  policy_spec.rs  repo_policy.rs  setup.rs
aff/src/repo_policy/: wrapped.rs
aff/tests/: config_patch.rs  repo_policy.rs
crates/harness-bridge/: Cargo.toml  build.rs
crates/harness-bridge/src/: app.rs  errors.rs  feature_flags.rs  hooks.rs  kernel.rs  lib.rs  main.rs  session.rs  setup.rs  workspace.rs
crates/harness-bridge/src/agents/: mod.rs
crates/harness-bridge/src/daemon/: agent_tui.rs  mod.rs  state.rs
crates/harness-bridge/src/daemon/agent_tui/: support.rs
crates/harness-bridge/src/infra/: mod.rs
crates/harness-bridge/src/run/: audit.rs
crates/harness-bridge/src/startup_migration/: mod.rs
crates/harness-bridge/tests/: standalone_parity.rs
crates/harness-codex-acp/: Cargo.toml
crates/harness-codex-acp/src/: main.rs
crates/harness-codex-acp/tests/: probe.rs
crates/harness-command/: Cargo.toml
crates/harness-command/src/: lib.rs  trusted.rs
crates/harness-command/tests/: shadow_symlink.rs
crates/harness-daemon/: Cargo.toml  build.rs
crates/harness-daemon-client/: Cargo.toml
crates/harness-daemon-client/src/: client.rs  lib.rs  locator.rs
crates/harness-daemon/src/: agents.rs  app.rs  git.rs  hooks.rs  infra.rs  kernel.rs  lib.rs  main.rs  observe.rs  run.rs  session.rs  setup.rs  workspace.rs
crates/harness-daemon/tests/: standalone_parity.rs  systemd_compat.rs
crates/harness-hook/: Cargo.toml
crates/harness-hook/src/: agents.rs  app.rs  feature_flags.rs  infra.rs  lib.rs  main.rs  platform.rs  run.rs  session.rs  setup.rs  telemetry.rs  workspace.rs
crates/harness-hook/src/agents/: runtime.rs  service.rs
crates/harness-hook/src/session/: daemon.rs  service.rs  storage.rs
crates/harness-hook/tests/: standalone.rs
crates/harness-mcp/: Cargo.toml
crates/harness-mcp/src/: app.rs  daemon.rs  errors.rs  lib.rs  main.rs  runtime.rs
crates/harness-mcp/tests/: cli.rs  dependency_guard.rs
crates/harness-openrouter-agent/: Cargo.toml
crates/harness-openrouter-agent/src/: lib.rs  main.rs
crates/harness-openrouter-agent/src/acp/: bridge.rs  mod.rs  model_catalog.rs  session.rs  tool_dispatch.rs  tool_translator.rs  turn.rs
crates/harness-openrouter-agent/src/openrouter/: config.rs  errors.rs  mod.rs  types.rs
crates/harness-openrouter-agent/tests/: acp_bridge.rs  acp_bridge_suite.rs  openrouter_http.rs
crates/harness-openrouter-agent/tests/acp_bridge/: core.rs  resilience.rs
crates/harness-protocol/: Cargo.toml
crates/harness-protocol/src/: agent_models.rs  daemon.rs  lib.rs
crates/harness-protocol/src/managed_agents/: mod.rs  runtime_models.rs  tui.rs
crates/harness-protocol/src/managed_agents/acp/: mcp.rs  mod.rs  models.rs  permission_wire.rs  request_wire.rs  snapshot_wire.rs  wire.rs
crates/harness-protocol/src/managed_agents/acp/wire/: tests.rs
crates/harness-protocol/tests/: dependency_guard.rs
crates/harness-systemd/: Cargo.toml  build.rs
crates/harness-systemd-protocol/: Cargo.toml
crates/harness-systemd-protocol/src/: lib.rs
crates/harness-systemd/src/: app.rs  errors.rs  lib.rs  main.rs  workspace.rs
crates/harness-systemd/src/daemon/: mod.rs  remote.rs
crates/harness-systemd/src/daemon/transport/: binary_exclusivity.rs  control.rs  mod.rs  remote.rs  remote_systemd.rs  remote_systemd_cgroup.rs  remote_systemd_inhibitor.rs  remote_systemd_lifecycle.rs  remote_systemd_start_permit.rs  remote_systemd_upgrade.rs  remote_systemd_upgrade_lifecycle.rs  tests.rs
crates/harness-systemd/src/daemon/transport/binary_exclusivity/: parser.rs  tests.rs
crates/harness-systemd/src/daemon/transport/remote_systemd_inhibitor/: tests.rs
crates/harness-systemd/src/daemon/transport/remote_systemd_lifecycle/: install_files.rs  unit_name.rs
crates/harness-systemd/src/daemon/transport/remote_systemd_start_permit/: tests.rs
crates/harness-systemd/src/daemon/transport/remote_systemd_start_permit/token/: storage.rs
crates/harness-systemd/src/daemon/transport/remote_systemd_upgrade_lifecycle/: automation.rs  binary.rs  capacity.rs  files.rs  model.rs  ownership.rs  recovery.rs  release_pair.rs  rollback.rs  systemd.rs  systemd_reset.rs  target_database.rs  workflow.rs
crates/harness-systemd/src/daemon/transport/remote_systemd_upgrade_lifecycle/automation/: recovery_arm.rs  recovery_units.rs
crates/harness-systemd/src/daemon/transport/remote_systemd_upgrade_lifecycle/capacity/: bytes.rs  debris.rs  inodes.rs  measure.rs
crates/harness-systemd/src/daemon/transport/tests/: remote_systemd.rs  remote_systemd_lifecycle.rs  remote_systemd_plan.rs  remote_systemd_uninstall.rs  remote_systemd_upgrade.rs
crates/harness-systemd/src/daemon/transport/tests/remote_systemd_uninstall/: retry.rs  (+1 more)
crates/harness-systemd/tests/: cli.rs  dependency_guard.rs
crates/harness-telemetry/: Cargo.toml
crates/harness-telemetry/src/: errors.rs  infra.rs  lib.rs  telemetry.rs  workspace.rs
crates/harness-telemetry/src/telemetry/: daemon_file.rs
testkit/: Cargo.toml
testkit/src/: builders.rs  env.rs  fake_binary.rs  fake_toolchain.rs  lib.rs
testkit/src/builders/: frontmatter.rs  group.rs  hook.rs  mod.rs  policy.rs  run.rs  schema.rs  suite.rs  tests.rs
testkit/src/contracts/: build.rs  compose.rs  docker.rs  helm.rs  http.rs  kubernetes.rs  kuma.rs  mod.rs  process.rs
testkit/src/contracts/compose/: tests.rs
testkit/src/contracts/docker/: tests.rs
testkit/src/contracts/helm/: tests.rs
testkit/src/contracts/http/: tests.rs
testkit/src/contracts/kubernetes/: tests.rs
testkit/src/contracts/process/: tests.rs
tools/openapi-codegen/: Cargo.toml
tools/openapi-codegen/src/: main.rs
tools/policy-codegen/: Cargo.toml
(+10510 files in other folders)
