[workspace]
members = [".", "testkit"]

[package]
name = "harness"
version = "29.4.1"
edition = "2024"
rust-version = "1.94"
include = [
  "Cargo.toml",
  "Cargo.lock",
  "LICENSE",
  "README.md",
  "build.rs",
  "clippy.toml",
  "src/**",
  "tests/**",
  "testkit/**",
  "resources/universal/templates/**",
  "agents/shared/claude-plugin-harness.sh",
  "apps/harness-monitor-macos/Resources/LaunchAgents/io.harnessmonitor.daemon.plist",
]

[dependencies]
bollard = "0.20.2"
bytes = "1.10.1"
clap = { version = "4.6.0", features = ["derive", "env"] }
compose_spec = "0.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yml = "0.0.12"
thiserror = "2.0.18"
sha2 = "0.11.0"
hex = "0.4.3"
chrono = { version = "0.4.44", features = ["serde"] }
tempfile = "3.27.0"
tabled = "0.20.0"
uzers = { version = "0.12.2", default-features = false }
shell-words = "1.1.0"
regex = "1.11.1"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "time", "process", "io-std", "io-util", "sync", "macros", "net", "tracing"] }
console-subscriber = { version = "0.5", optional = true }
reqwest = { version = "0.13.2", features = ["json"] }
rustls = { version = "0.23.37", features = ["ring"] }
notify = "8.2.0"
backoff = { version = "0.4.0", features = ["tokio"] }
minijinja = "2.17.1"
rayon = "1.11.0"
base64 = "0.22.1"
futures-util = "0.3.31"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["chrono", "env-filter", "json"] }
opentelemetry = { version = "0.31.0", default-features = false, features = ["trace", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.31.0", default-features = false, features = ["trace", "metrics", "logs", "rt-tokio"] }
opentelemetry-otlp = { version = "0.31.1", default-features = false, features = ["trace", "metrics", "logs", "grpc-tonic", "http-proto", "reqwest-client"] }
tracing-opentelemetry = { version = "0.32.1", default-features = false }
opentelemetry-appender-tracing = "0.31.1"
tonic = { version = "0.14.1", default-features = false }
pyroscope = { version = "2.0.0", features = ["backend-pprof-rs"] }
fs2 = "0.4.3"
fs-err = "3.3.0"
gix = { version = "0.81.0", features = ["status", "worktree-mutation", "index"] }
pathdiff = "0.2.3"
gray_matter = { version = "0.3.2", default-features = false, features = ["yaml"] }
tar = "0.4.44"
user_dirs = "0.2.0"
walkdir = "2.5.0"
serde-sarif = "0.8.0"
k8s-openapi = { version = "0.27.1", features = ["v1_31"] }
kube = { version = "3.1.0", features = ["runtime", "ws"] }
axum = { version = "0.8.7", features = ["json", "ws"] }
async-stream = "0.3.6"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
rusqlite = { version = "0.37", features = ["bundled"] }
sea-query = { version = "1.0.0-rc.33", default-features = false, features = ["backend-sqlite"] }
sqlx = { version = "0.9.0-alpha.1", default-features = false, features = ["sqlite", "sqlite-bundled", "runtime-tokio", "tls-rustls-ring", "migrate", "macros", "chrono", "uuid", "json"] }
async-trait = "0.1.83"
tokio-tungstenite = { version = "0.29.0", default-features = false, features = ["connect"] }
portable-pty = "0.9.0"
vt100 = "0.16.2"
crossterm = "0.29.0"
libc = "0.2"
rand = "0.10.1"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"
core-foundation = "0.10"

[dev-dependencies]
assert_cmd = "2.2.0"
predicates = "3.1.4"
tempfile = "3.27.0"
insta = "1.46.3"
harness-testkit = { path = "testkit" }
temp-env = { version = "0.3.6", features = ["async_closure"] }

[features]
default = ["all-adapters"]
all-adapters = ["kuma", "helm", "k3d", "compose"]
kuma = []
helm = []
k3d = []
compose = []
tokio-console = ["dep:console-subscriber"]

[profile.dev]
debug = "line-tables-only"

[profile.test]
debug = "line-tables-only"

[lints.clippy]
pedantic = { level = "deny", priority = 1 }
absolute_paths = { level = "deny", priority = 2 }
cognitive_complexity = { level = "deny", priority = 2 }
needless_pass_by_value = { level = "deny", priority = 2 }
ptr_arg = { level = "deny", priority = 2 }
redundant_clone = { level = "deny", priority = 2 }
unnecessary_to_owned = { level = "deny", priority = 2 }

[lints.rust]
unused = { level = "deny", priority = 1 }
unexpected_cfgs = { level = "deny", priority = 2, check-cfg = ['cfg(feature, values("tokio-console"))'] }
