[workspace]
members = [
  ".",
  "aff",
  "crates/harness-bridge",
  "crates/harness-command",
  "crates/harness-daemon-client",
  "crates/harness-daemon",
  "crates/harness-hook",
  "crates/harness-mcp",
  "crates/harness-protocol",
  "crates/harness-systemd",
  "crates/harness-systemd-protocol",
  "crates/harness-telemetry",
  "testkit",
  "tools/policy-codegen",
]

[package]
name = "harness"
version = "48.1.0"
edition = "2024"
rust-version = "1.94"
autoexamples = false
include = [
  "Cargo.toml",
  "Cargo.lock",
  "LICENSE",
  "README.md",
  "clippy.toml",
  "examples/policy-wire-sample.rs",
  "src/**",
  "tests/**",
  "testkit/**",
  "resources/universal/templates/**",
  "agents/shared/claude-plugin-harness.sh",
  "apps/harness-monitor/Resources/LaunchAgents/io.harnessmonitor.daemon.plist",
]

[dependencies]
harness-command = { path = "crates/harness-command", version = "48.1.0" }
harness-mcp = { path = "crates/harness-mcp", version = "48.1.0", optional = true }
harness-protocol = { path = "crates/harness-protocol", version = "48.1.0" }
harness-systemd-protocol = { path = "crates/harness-systemd-protocol", version = "48.1.0", optional = true }
harness-telemetry = { path = "crates/harness-telemetry", version = "48.1.0" }
arc-swap = "1.9.1"
bollard = "0.21.0"
bytes = "1.10.1"
clap = { version = "4.6.0", features = ["derive", "env"] }
compose_spec = "0.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yml = "0.0.13"
thiserror = "2.0.18"
sha1 = "0.11.0"
sha2 = "0.11.0"
hex = "0.4.3"
hmac = { version = "0.13.0", optional = true }
chrono = { version = "0.4.44", features = ["serde"] }
tempfile = "3.27.0"
uzers = { version = "0.12.2", default-features = false }
shell-words = "1.1.0"
regex = "1.11.1"
ssh-key = { version = "0.7.0-rc.10", features = ["crypto", "encryption"] }
tokio = { version = "1.50.0", features = ["fs", "rt-multi-thread", "time", "process", "io-std", "io-util", "sync", "macros", "net", "tracing", "test-util"] }
tokio-rustls = { version = "0.26.4", optional = true }
tokio-util = { version = "0.7.18", features = ["compat"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde_urlencoded = { version = "0.7.1", optional = true }
rustls = { version = "0.23.37", features = ["ring"] }
notify = "8.2.0"
minijinja = "2.17.1"
noyalib = { version = "0.0.5", default-features = false, features = ["std", "compat-serde-yaml"] }
rayon = "1.11.0"
base64 = "0.22.1"
futures-util = "0.3.31"
pgp = { version = "0.19.0", default-features = false }
rand_core06 = { package = "rand_core", version = "0.6.4", features = ["std"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["chrono", "env-filter", "json"], optional = true }
fs2 = "0.4.3"
fs-err = "3.3.0"
gix = { version = "0.83.0", features = [
    "status",
    "worktree-mutation",
    "index",
    "blocking-http-transport-reqwest-rust-tls",
] }
http-body-util = { version = "0.1", optional = true }
http = "1.4.2"
instant-acme = { version = "0.8.5", default-features = false, features = ["hyper-rustls", "rcgen", "ring"], optional = true }
pathdiff = "0.2.3"
rcgen = { version = "0.14.8", default-features = false, features = ["pem", "ring", "x509-parser"], optional = true }
x509-parser = { version = "=0.18.1", optional = true }
gray_matter = { version = "0.3.2", default-features = false, features = ["yaml"] }
tar = "0.4.44"
user_dirs = "0.2.0"
walkdir = "2.5.0"
similar = "3.0"
serde-sarif = "0.8.0"
k8s-openapi = { version = "0.27.1", features = ["v1_31"] }
kube = { version = "3.1.0", features = ["runtime", "ws"] }
axum = { version = "0.8.7", features = ["json", "ws"], optional = true }
async-stream = { version = "0.3.6", optional = true }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
rusqlite = { version = "0.37", features = ["bundled"], optional = true }
sea-query = { version = "1.0.0-rc.33", default-features = false, features = ["backend-sqlite"], optional = true }
sqlx = { version = "0.9.0-alpha.1", default-features = false, features = ["sqlite", "sqlite-bundled", "runtime-tokio", "tls-rustls-ring", "migrate", "macros", "chrono", "uuid", "json"], optional = true }
async-trait = "0.1.83"
tokio-tungstenite = { version = "0.29.0", default-features = false, features = ["connect"] }
portable-pty = { version = "0.9.0", optional = true }
vt100 = { version = "0.16.2", optional = true }
crossterm = "0.29.0"
libc = "0.2"
nix = { version = "0.31", features = ["fs", "signal", "socket", "user"], optional = true }
signal-hook = { version = "0.4", optional = true }
agent-client-protocol = { version = "=0.12.1", features = ["unstable_session_model"], optional = true }
hickory-resolver = { version = "0.26.1", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"
core-foundation = "0.10"

[dev-dependencies]
assert_cmd = "=2.2.0"
predicates = "=3.1.4"
tempfile = "=3.27.0"
insta = "=1.46.3"
harness-testkit = { path = "testkit" }
temp-env = { version = "=0.3.6", features = ["async_closure"] }
axum = { version = "0.8.7", features = ["json", "ws"] }
opentelemetry = { version = "0.32.0", default-features = false, features = ["trace", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.32.0", default-features = false, features = ["trace", "metrics", "logs", "rt-tokio"] }
tracing-opentelemetry = { version = "0.33.0", default-features = false }
tracing-subscriber = { version = "0.3.23", features = ["chrono", "env-filter", "json"] }

[features]
default = ["all-adapters"]
all-adapters = ["kuma", "helm", "k3d", "compose"]
bridge-runtime = [
  "dep:agent-client-protocol",
  "dep:nix",
  "dep:portable-pty",
  "dep:signal-hook",
  "dep:vt100",
]
daemon-runtime = [
  "bridge-runtime",
  "dep:async-stream",
  "dep:axum",
  "dep:hmac",
  "dep:hickory-resolver",
  "dep:http-body-util",
  "dep:harness-systemd-protocol",
  "dep:instant-acme",
  "dep:rcgen",
  "dep:rusqlite",
  "dep:sea-query",
  "dep:sqlx",
  "dep:serde_urlencoded",
  "dep:tokio-rustls",
  "dep:tracing-subscriber",
  "dep:x509-parser",
]
standalone-daemon = []
standalone-worker = []
full-runtime = ["daemon-runtime", "mcp-runtime"]
mcp-runtime = ["dep:harness-mcp"]
kuma = []
helm = []
k3d = []
compose = []
remote-systemd-e2e-faults = []
tokio-console = ["harness-telemetry/tokio-console"]

[[example]]
name = "policy-wire-sample"
path = "examples/policy-wire-sample.rs"

[profile.dev]
debug = "line-tables-only"

[profile.test]
debug = "line-tables-only"

[lints.clippy]
pedantic = { level = "deny", priority = 1 }
absolute_paths = { level = "deny", priority = 2 }
cognitive_complexity = { level = "deny", priority = 2 }
needless_pass_by_value = { level = "deny", priority = 2 }
ptr_arg = { level = "deny", priority = 2 }
redundant_clone = { level = "deny", priority = 2 }
unnecessary_to_owned = { level = "deny", priority = 2 }

[lints.rust]
unused = { level = "deny", priority = 1 }
unexpected_cfgs = { level = "deny", priority = 2, check-cfg = ['cfg(feature, values("remote-systemd-e2e-faults", "tokio-console"))'] }
