[package]
name = "aff"
version = "30.15.0"
edition = "2024"
rust-version = "1.94"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
shell-words = "1.1.0"

[dev-dependencies]
assert_cmd = "2.2.0"
predicates = "3.1.4"
