[package]
name = "harness-testkit"
version = "22.0.12"
edition = "2024"
rust-version = "1.94"

[dependencies]
harness = { path = ".." }
assert_cmd = "2.2.0"
jsonschema = "0.46.0"
serde_json = "1.0.149"
serde_yml = "0.0.12"
tempfile = "3.27.0"
temp-env = "0.3.6"

[lints.clippy]
pedantic = { level = "deny", priority = 1 }
