[package]
name = "harness-command"
version = "48.4.0"
edition = "2024"
rust-version = "1.94"

[dependencies]
uzers = { version = "0.12.2", default-features = false }

[lints.clippy]
pedantic = { level = "deny", priority = 1 }

[lints.rust]
unused = { level = "deny", priority = 1 }

[dev-dependencies]
tempfile = "=3.27.0"
