[package]
name = "harness-daemon-client"
version = "49.3.0"
edition = "2024"
rust-version = "1.94"
publish = false

[dependencies]
fs2 = "0.4.3"
reqwest = { version = "0.13.2", features = ["blocking", "json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tracing = "0.1.44"
user_dirs = "0.2.0"
uzers = { version = "0.12.2", default-features = false }

[dev-dependencies]
temp-env = "=0.3.6"
tempfile = "=3.27.0"

[features]
test-support = []

[lints.clippy]
pedantic = { level = "deny", priority = 1 }

[lints.rust]
unused = { level = "deny", priority = 1 }
