[package]
name = "harness-hook"
version = "49.2.0"
edition = "2024"
rust-version = "1.94"

[lib]
test = false

[[bin]]
name = "harness-hook"
path = "src/main.rs"
test = false

[dependencies]
clap = { version = "4.6.0", features = ["derive", "env"] }
harness-daemon-client = { path = "../harness-daemon-client", version = "49.2.0" }
harness-protocol = { path = "../harness-protocol", version = "49.2.0" }
harness-telemetry = { path = "../harness-telemetry", version = "49.2.0" }
chrono = { version = "0.4.44", features = ["serde"] }
fs-err = "3.3.0"
fs2 = "0.4.3"
gix = { version = "0.83.0", features = ["status"] }
gray_matter = { version = "0.3.2", default-features = false, features = ["yaml"] }
hex = "0.4.3"
rayon = "1.11.0"
regex = "1.11.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
shell-words = "1.1.0"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "time", "sync"] }
tracing = "0.1.44"
user_dirs = "0.2.0"
uzers = { version = "0.12.2", default-features = false }
uuid = { version = "1.18.1", features = ["v4"] }
walkdir = "2.5.0"

[dev-dependencies]
temp-env = "0.3.6"
tracing-subscriber = "0.3.23"

[features]
default = ["standalone-worker"]
bridge-runtime = []
daemon-runtime = []
standalone-worker = []
tokio-console = ["harness-telemetry/tokio-console"]

[lints.clippy]
pedantic = { level = "deny", priority = 1 }

[lints.rust]
unused = { level = "deny", priority = 1 }
