[package]
name = "harness-openrouter-agent"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
publish = false
autotests = false

[dependencies]
agent-client-protocol = "=1.3.0"
async-stream = "0.3.6"
clap = { version = "4.6.0", features = ["derive"] }
futures-util = "0.3.31"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "io-std", "io-util", "sync", "macros", "time", "process"] }
tokio-util = { version = "0.7.18", features = ["compat"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["v4"] }

[dev-dependencies]
tempfile = "=3.27.0"
wiremock = "=0.6.5"

[[bin]]
name = "harness-openrouter-agent"
path = "src/main.rs"

[lib]
name = "harness_openrouter_agent"
path = "src/lib.rs"

[[test]]
name = "acp_bridge"
path = "tests/acp_bridge_suite.rs"

[[test]]
name = "openrouter_http"
path = "tests/openrouter_http.rs"

[workspace]
