[package]
name = "harness-systemd-protocol"
version = "49.2.0"
edition = "2024"
rust-version = "1.94"
publish = false

[dependencies]
thiserror = "2.0.18"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.31", features = ["socket"] }

[dev-dependencies]
temp-env = "=0.3.6"
tempfile = "=3.27.0"

[lints.clippy]
pedantic = { level = "deny", priority = 1 }

[lints.rust]
unused = { level = "deny", priority = 1 }
