[package]
name = "harness-systemd"
version = "49.1.0"
edition = "2024"
rust-version = "1.94"
build = "build.rs"

[[bin]]
name = "harness-systemd"
path = "src/main.rs"

[dependencies]
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive"] }
fs-err = "3.3.0"
fs2 = "0.4.3"
harness-command = { path = "../harness-command", version = "49.1.0" }
hex = "0.4.3"
libc = "0.2"
nix = { version = "0.31", features = ["fs", "signal", "user"] }
rusqlite = { version = "0.37", features = ["bundled"] }
semver = "1.0.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
shell-words = "1.1.0"
tempfile = "3.27.0"
thiserror = "2.0.18"
uzers = { version = "0.12.2", default-features = false }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "=2.2.0"

[features]
remote-systemd-e2e-faults = []

[lints.clippy]
pedantic = { level = "deny", priority = 1 }
absolute_paths = { level = "deny", priority = 2 }
cognitive_complexity = { level = "deny", priority = 2 }
needless_pass_by_value = { level = "deny", priority = 2 }
ptr_arg = { level = "deny", priority = 2 }
redundant_clone = { level = "deny", priority = 2 }
unnecessary_to_owned = { level = "deny", priority = 2 }

[lints.rust]
unused = { level = "deny", priority = 1 }
unexpected_cfgs = { level = "deny", priority = 2, check-cfg = ['cfg(feature, values("remote-systemd-e2e-faults"))'] }
