[package]
name = "harness-telemetry"
version = "48.1.1"
edition = "2024"
rust-version = "1.94"
publish = false

[dependencies]
axum = { version = "0.8.7", features = ["json"] }
chrono = { version = "0.4.44", features = ["serde"] }
console-subscriber = { version = "0.5", optional = true }
opentelemetry = { version = "0.32.0", default-features = false, features = ["trace", "metrics", "logs"] }
opentelemetry-appender-tracing = "0.32.0"
opentelemetry-otlp = { version = "0.32.0", default-features = false, features = ["trace", "metrics", "logs", "grpc-tonic", "http-proto", "reqwest-client"] }
opentelemetry_sdk = { version = "0.32.0", default-features = false, features = ["trace", "metrics", "logs", "rt-tokio"] }
pyroscope = { version = "2.0.0", features = ["backend-pprof-rs"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "sync", "time"] }
tonic = { version = "0.14.1", default-features = false }
tracing = "0.1.44"
tracing-opentelemetry = { version = "0.33.0", default-features = false }
tracing-subscriber = { version = "0.3.23", features = ["chrono", "env-filter", "json"] }
user_dirs = "0.2.0"

[dev-dependencies]
temp-env = "0.3.6"
tempfile = "3.27.0"

[features]
tokio-console = ["dep:console-subscriber"]

[lints.clippy]
pedantic = { level = "deny", priority = 1 }

[lints.rust]
unused = { level = "deny", priority = 1 }
unexpected_cfgs = { level = "deny", priority = 2, check-cfg = ['cfg(feature, values("tokio-console"))'] }
