[package]
name = "openapi-codegen"
version = "0.0.0"
edition = "2024"
rust-version = "1.94"
publish = false

[[bin]]
name = "openapi-codegen"
path = "src/main.rs"

[dependencies]
harness-daemon = { path = "../../crates/harness-daemon", features = ["openapi"] }

[lints.clippy]
pedantic = { level = "deny", priority = 1 }

[lints.rust]
unused = { level = "deny", priority = 1 }
